fix the bug of the verse being scaled on mobile and pink border not showing on mobile

--- a/src/components/Verse/styles.css
+++ b/src/components/Verse/styles.css
@@ -12,10 +12,13 @@
     animation-duration: 1s;
 }
 
+.verse:hover{
+    border-color: var(--verseAccentColor);
+}
+
 .verse[isdesktop="true"]:hover{
     transform: scale(1.07);
     transition: 0.2s ease-in-out;
-    border-color: var(--verseAccentColor);
 }
 
 .verse p:nth-child(2) {
